@@ -27,6 +27,7 @@ Bugs fixed:
 - 2538227 Daemon clients are not unloading providers (localclient)
 - 2771516 Duplicate extern in indCIMXMLHandler.c
 - 2771819 Some ClXXX functions in objectImpl assume "data" is not NULL
+- 2779859 HOST defaults to "localhost" in XML output of OBJECTPATH
 
 Changes in 1.3.3
 ================
