@@ -1,3 +1,8 @@
+2009-04-23 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* cimXmlGen.c
+	[ 2779859 ] HOST defaults to "localhost" in XML output of OBJECTPATH
+
 2009-04-17  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* indCIMXMLHandler.c:
